# stuff

./: c_over_c_plus_plus.cc  callback_or_not.py  compile_time_runtime_selection_from_env.cc  compile_time_runtime_selection_from_env.txt  gcc_menu_uniq.py  mine_git_log.py  objwalk.py  pickle_fun.py  shared_from_this_custom_deleters.cpp  type_mixer.cc
caster_odr/: car.cc  compile_and_run.bat  compile_and_run.sh  engine.h  truck.cc  vehicle_specs.cc
caster_odr_decltype/: car.cc  compile_and_run.sh  engine.h  truck.cc  vehicle_specs.cc
caster_odr_hidden_engine/: car.cc  engine.h  truck.cc  vehicle_specs.cc
caster_odr_specs_odr_guard/: car.cc  compile_and_run.bat  compile_and_run.sh  engine.h  truck.cc  vehicle_specs.cc
caster_odr_specs_scope/: car.cc  compile_and_run.bat  compile_and_run.sh  engine.h  truck.cc  unknown.cc  vehicle_specs.cc
cuda-python/: cuda_bindings_bootstrap_dev.sh  cuda_bindings_nvvm_proc_self_maps.py  cuda_bindings_run_pytest_using_existing_wheel.sh  find_dead_links.py  get_rtld_search_dirs.py  pip_install_cuda_bindings_miniforge.sh  pip_install_cuda_bindings_miniforge_many.sh
error_already_set/: error_fetch_restore.cc  error_string_or_what.cc  sizeof_std_exception.cc
godbolt/: jorg_black_box.cpp  (+2 more)
test_with_boost_python/: CMakeLists.txt  README.txt  test_pickle_simple_callable.cpp  test_pickle_simple_callable.py  test_pickle_simple_callable_build_and_test.txt  test_python_multiple_inheritance.cpp  test_python_multiple_inheritance.py  test_python_multiple_inheritance_build_and_test.txt  test_python_multiple_inheritance_diffs.txt
(+103 files in other folders)
